[tool.poetry]
name = "quam_libs"
version = "0.1.0"
description = "QuAM Components for Quantum Control"
readme = "README.md"
authors = ["Dean Poulos <dean.poulos@quantum-machines.co>"]
license = "BSD-3-Clause"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.10"
"a2wsgi" = "1.10.10"
"annotated-types" = "0.7.0"
"anyio" = "4.10.0"
"argcomplete" = "3.6.2"
"argon2-cffi" = "25.1.0"
"argon2-cffi-bindings" = "25.1.0"
"arrow" = "1.3.0"
"asteval" = "1.0.6"
"asttokens" = "3.0.0"
"async-lru" = "2.0.5"
"attrs" = "25.3.0"
"babel" = "2.17.0"
"backports.tarfile" = "1.2.0"
"beautifulsoup4" = "4.13.4"
"betterproto" = "2.0.0b7"
"black" = "25.1.0"
"bleach" = "6.2.0"
"build" = "1.3.0"
"CacheControl" = "0.14.3"
"certifi" = "2025.8.3"
"cffi" = "1.17.1"
"charset-normalizer" = "3.4.2"
"cleo" = "2.1.0"
"click" = "8.2.1"
"cloudpickle" = "3.1.1"
"colorama" = "0.4.6"
"comm" = "0.2.3"
"contourpy" = "1.3.2"
"crashtest" = "0.4.1"
"cryptography" = "45.0.6"
"cycler" = "0.12.1"
"datadog-api-client" = "2.40.0"
"datamodel-code-generator" = "0.26.5"
"debugpy" = "1.8.16"
"decorator" = "5.2.1"
"defusedxml" = "0.7.1"
"dependency-injector" = "4.48.1"
"deprecation" = "2.1.0"
"dill" = "0.4.0"
"distlib" = "0.4.0"
"dnspython" = "2.7.0"
"dulwich" = "0.22.8"
"email_validator" = "2.2.0"
"exceptiongroup" = "1.3.0"
"executing" = "2.2.0"
"Farama-Notifications" = "0.0.4"
"fastapi" = "0.115.14"
"fastjsonschema" = "2.21.2"
"filelock" = "3.19.1"
"findpython" = "0.6.3"
"fonttools" = "4.59.0"
"fqdn" = "1.5.1"
"genson" = "1.3.0"
"grpcio" = "1.74.0"
"grpclib" = "0.4.5"
"gymnasium" = "1.2.0"
"h11" = "0.16.0"
"h2" = "4.2.0"
"hpack" = "4.1.0"
"httpcore" = "1.0.9"
"httpx" = "0.28.1"
"hyperframe" = "6.1.0"
"ibm-cloud-sdk-core" = "3.24.2"
"ibm-platform-services" = "0.68.1"
"idna" = "3.10"
"importlib_metadata" = "8.7.0"
"inflect" = "5.6.2"
"installer" = "0.7.0"
"ipykernel" = "6.30.1"
"ipython" = "8.37.0"
"isoduration" = "20.11.0"
"isort" = "5.13.2"
"jaraco.classes" = "3.4.0"
"jaraco.context" = "6.0.1"
"jaraco.functools" = "4.3.0"
"jedi" = "0.19.2"
"Jinja2" = "3.1.6"
"joblib" = "1.5.1"
"json5" = "0.12.1"
"jsonpatch" = "1.33"
"jsonpointer" = "3.0.0"
"jsonschema" = "4.25.1"
"jsonschema-specifications" = "2025.4.1"
"jupyter_client" = "8.6.3"
"jupyter_core" = "5.8.1"
"jupyter-events" = "0.12.0"
"jupyter-lsp" = "2.2.6"
"jupyter_server" = "2.16.0"
"jupyter_server_terminals" = "0.5.3"
"jupyterlab" = "4.4.6"
"jupyterlab_pygments" = "0.3.0"
"jupyterlab_server" = "2.27.3"
"keyring" = "25.6.0"
"kiwisolver" = "1.4.8"
"lark" = "1.2.2"
"lmfit" = "1.3.4"
"MarkupSafe" = "3.0.2"
"marshmallow" = "3.23.3"
"marshmallow-polyfield" = "5.11"
"matplotlib" = "3.10.5"
"matplotlib-inline" = "0.1.7"
"mistune" = "3.1.3"
"more-itertools" = "10.7.0"
"mpmath" = "1.3.0"
"msgpack" = "1.1.1"
"multidict" = "6.6.3"
"mypy_extensions" = "1.1.0"
"nbclient" = "0.10.2"
"nbconvert" = "7.16.6"
"nbformat" = "5.10.4"
"nest_asyncio" = "1.6.0"
"networkx" = "3.2.1"
"notebook" = "7.4.5"
"notebook_shim" = "0.2.4"
"numpy" = "1.26.4"
"overrides" = "7.7.0"
"packaging" = "25.0"
"pandas" = "2.3.1"
"pandocfilters" = "1.5.1"
"parso" = "0.8.4"
"pathspec" = "0.12.1"
"pbr" = "6.1.1"
"pbs-installer" = "2025.8.18"
"pickleshare" = "0.7.5"
"pillow" = "11.3.0"
"pkginfo" = "1.12.1.2"
"platformdirs" = "4.3.8"
"plotly" = "5.24.1"
"poetry" = "2.1.3"
"poetry-core" = "2.1.3"
"prometheus_client" = "0.22.1"
"prompt_toolkit" = "3.0.51"
"protobuf" = "6.32.0"
"psutil" = "7.0.0"
"pure_eval" = "0.2.3"
"pycparser" = "2.22"
"pydantic" = "2.11.7"
"pydantic_core" = "2.33.2"
"pydantic-settings" = "2.10.1"
"Pygments" = "2.19.2"
"PyJWT" = "2.10.1"
"pylatexenc" = "2.10"
"pyparsing" = "3.2.3"
"pyproject_hooks" = "1.2.0"
"PyQt6" = "6.9.1"
"PyQt6-Qt6" = "6.9.1"
"PyQt6_sip" = "13.10.2"
"pyspnego" = "0.11.2"
"python-dateutil" = "2.9.0.post0"
"python-dotenv" = "1.1.1"
"python-json-logger" = "3.3.0"
"pytz" = "2025.2"
"pywin32" = "311"
"pywin32-ctypes" = "0.2.3"
"pywinpty" = "3.0.0"
"PyYAML" = "6.0.2"
"pyzmq" = "27.0.1"
"qiskit" = "2.1.1"
"qiskit-aer" = "0.17.1"
"qiskit-experiments" = "0.11.0"
"qiskit-ibm-experiment" = "0.4.8"
"qiskit-ibm-runtime" = "0.41.0"
"qm-octave" = "2.1.6"
"qm-qua" = "1.2.3"
"qualang-tools" = "0.20.0"
"qualibrate" = "0.2.2"
"qualibrate-app" = "0.3.5"
"qualibrate-config" = "0.1.6"
"qualibrate-core" = "0.3.2"
"qualibrate-runner" = "0.3.3"
"quam" = "0.4.2"
"RapidFuzz" = "3.13.0"
"referencing" = "0.36.2"
"requests" = "2.32.4"
"requests_ntlm" = "1.3.0"
"requests-toolbelt" = "1.0.0"
"rfc3339-validator" = "0.1.4"
"rfc3986-validator" = "0.1.1"
"rfc3987-syntax" = "1.1.0"
"rpds-py" = "0.27.0"
"rustworkx" = "0.16.0"
"scikit-learn" = "1.7.1"
"scipy" = "1.15.3"
"seaborn" = "0.13.2"
"Send2Trash" = "1.8.3"
"shellingham" = "1.5.4"
"six" = "1.17.0"
"sniffio" = "1.3.1"
"soupsieve" = "2.7"
"sspilib" = "0.3.1"
"stack_data" = "0.6.3"
"starlette" = "0.46.2"
"stevedore" = "5.4.1"
"symengine" = "0.13.0"
"sympy" = "1.14.0"
"tenacity" = "9.1.2"
"terminado" = "0.18.1"
"threadpoolctl" = "3.6.0"
"tinycss2" = "1.4.0"
"tinydb" = "4.8.2"
"toml" = "0.10.2"
"tomli" = "2.2.1"
"tomli_w" = "1.2.0"
"tomlkit" = "0.13.3"
"tornado" = "6.5.1"
"tqdm" = "4.67.1"
"traitlets" = "5.14.3"
"trove-classifiers" = "2025.8.6.13"
"typeguard" = "4.4.4"
"types-networkx" = "3.2.1.20240918"
"types-python-dateutil" = "2.9.0.20250809"
"typing_extensions" = "4.14.1"
"typing-inspection" = "0.4.1"
"tzdata" = "2025.2"
"uncertainties" = "3.2.3"
"uri-template" = "1.3.0"
"urllib3" = "2.5.0"
"uvicorn" = "0.34.3"
"virtualenv" = "20.34.0"
"wcwidth" = "0.2.13"
"webcolors" = "24.11.1"
"webencodings" = "0.5.1"
"websocket-client" = "1.8.0"
"xarray" = "2025.6.1"
"zipp" = "3.23.0"
"zstandard" = "0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
